Bug 516210 - Krita does not provide a bug report address, for Dr. Konqi
Summary: Krita does not provide a bug report address, for Dr. Konqi
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.2.14
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL: https://discuss.kde.org/t/where-does-...
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-18 14:21 UTC by Mr BEEDELL Roke Julian Lockhart
Modified: 2026-02-27 13:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A Screenshot Of Dr. Konqi Informing The User Of This (29.13 KB, image/png)
2026-02-18 14:21 UTC, Mr BEEDELL Roke Julian Lockhart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mr BEEDELL Roke Julian Lockhart 2026-02-18 14:21:23 UTC
Created attachment 189746 [details]
A Screenshot Of Dr. Konqi Informing The User Of This

# SUMMARY

Krita does not provide a bug report address, for Dr. Konqi.

# STEPS TO REPRODUCE

Crash Krita.

# OBSERVED RESULT

Dr. Konqi reports that Krita does not provide a bug report address.

# EXPECTED RESULT

It should.

# SOFTWARE/OS VERSIONS

> ~~~
> Operating System: Fedora Linux 43
> KDE Plasma Version: 6.5.5
> KDE Frameworks Version: 6.22.0
> Qt Version: 6.10.1
> Kernel Version: 6.18.10-200.fc43.x86_64 (64-bit)
> Graphics Platform: Wayland
> ~~~

# ADDITIONAL INFORMATION

The placement of this report is per:

1. https://discuss.kde.org/t/is-a-kde-application-not-providing-a-bug-reporting-address-a-bug/34640?u=rokejulianlockhart

2. https://discuss.kde.org/t/where-does-one-report-that-konqi-lacks-a-bug-report-address/44475?u=rokejulianlockhart

Regardless, due to https://bugs.kde.org/show_bug.cgi?id=506879#c4, this may not yet be useful.
Comment 1 Bug Janitor Service 2026-02-19 12:34:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2656
Comment 2 Bug Janitor Service 2026-02-23 17:00:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2665
Comment 3 Dmitry Kazakov 2026-02-25 16:59:45 UTC
Git commit 5b5eccbc6bfc0fc21445ea6d60c01a9b5dbe89d6 by Dmitry Kazakov.
Committed on 25/02/2026 at 16:53.
Pushed by dkazakov into branch 'master'.

Use KAboutData to fill the official application info

This patch allows DrKonqi to properly report bugs for Krita,
when a crash happens.

M  +26   -8    libs/ui/KisApplication.cpp
M  +1    -8    libs/ui/KisMainWindow.cpp
M  +1    -0    libs/ui/dialogs/kis_about_application.cpp

https://invent.kde.org/graphics/krita/-/commit/5b5eccbc6bfc0fc21445ea6d60c01a9b5dbe89d6
Comment 4 Dmitry Kazakov 2026-02-27 13:59:37 UTC
Git commit 8619ad4aca2c26ecbf24c998ccc2f2e87d2dbc24 by Dmitry Kazakov.
Committed on 27/02/2026 at 13:56.
Pushed by dkazakov into branch 'krita/6.0'.

Use KAboutData to fill the official application info

This patch allows DrKonqi to properly report bugs for Krita,
when a crash happens.

M  +26   -8    libs/ui/KisApplication.cpp
M  +1    -8    libs/ui/KisMainWindow.cpp
M  +1    -0    libs/ui/dialogs/kis_about_application.cpp

https://invent.kde.org/graphics/krita/-/commit/8619ad4aca2c26ecbf24c998ccc2f2e87d2dbc24