Use KAboutData to fill the official application info

This patch allows DrKonqi to properly report bugs for Krita,
when a crash happens.

BUG:516210